--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,30 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
-#    parameter_name: value
+    tiller.decoder.json.class: AppBundle\Decoder\JsonDecoder
+    tiller.decoder.xml.class: AppBundle\Decoder\XmlDecoder
+    tiller.decoder_provider.class: AppBundle\Decoder\ContainerDecoderProvider
+    tiller.body_listener.class: AppBundle\EventListener\BodyListener
+    tiller.decoders:
+        json: tiller.decoder.json
+        xml: tiller.decoder.xml
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    tiller.decoder.json:
+        class: %tiller.decoder.json.class%
+        
+    tiller.decoder.xml:
+        class: %tiller.decoder.xml.class%
+        
+    tiller.decoder_provider:
+        class: %tiller.decoder_provider.class%
+        arguments: [%tiller.decoders%]
+        calls:
+            - [setContainer, ["@service_container"]]
+        
+    tiller.body_listener:
+        class: %tiller.body_listener.class%
+        arguments: ["@tiller.decoder_provider"]
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 10 }
+
